@@ -1212,6 +1212,13 @@ struct ipmi_oem_command oem_supermicro[] =
       ipmi_oem_supermicro_get_power_supply_status
     },
     {
+      "get-power-supply-status2",
+      "<ps_num>",
+      1,
+      IPMI_OEM_COMMAND_FLAGS_DEFAULT,
+      ipmi_oem_supermicro_get_power_supply_status2
+    },
+    {
       "get-pmbus-power-supply-status",
       "<ps_num>",
       1,
